<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationFrag">


    <Button
        android:id="@+id/template1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="10dp"
        android:text="@string/template_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/template2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/template2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/template_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/template3"
        app:layout_constraintEnd_toEndOf="@+id/template1"
        app:layout_constraintStart_toStartOf="@+id/template1"
        app:layout_constraintTop_toBottomOf="@+id/template1" />

    <Button
        android:id="@+id/template3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/template_3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/template4"
        app:layout_constraintEnd_toEndOf="@+id/template2"
        app:layout_constraintStart_toStartOf="@+id/template2"
        app:layout_constraintTop_toBottomOf="@+id/template2" />

    <Button
        android:id="@+id/template4"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="340dp"
        android:text="@string/template_4"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/template3"
        app:layout_constraintStart_toStartOf="@+id/template3"
        app:layout_constraintTop_toBottomOf="@+id/template3" />

</androidx.constraintlayout.widget.ConstraintLayout>