<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#67817E">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="83dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="31dp"
            android:fontFamily="@font/roboto"
            android:text="@string/currentmusic"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/playlist"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.157" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_expand_more_24" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="47dp"
            android:layout_height="57dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_airplay_foreground" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="58dp"
            android:layout_height="54dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="294dp"
        android:layout_height="282dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@mipmap/ic_goldenwindost_foreground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="366dp"
        android:layout_height="400dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto"
            android:text="@string/trackname"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/artistname"
            android:textAlignment="viewStart"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="44dp"
            android:layout_height="92dp"
            android:scaleX="-1"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_replyarrow_foreground" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="48dp"
            android:layout_height="92dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_morevert_foreground" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:00"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="124dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5:15"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="327dp"
            tools:layout_editor_absoluteY="124dp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="53dp"
            android:layout_height="49dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/ic_favorite_foreground" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="53dp"
            android:layout_height="49dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_favoritefilled_foreground" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView11"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:srcCompat="@drawable/ic_play_foreground" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="73dp"
            android:layout_height="108dp"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:srcCompat="@drawable/ic_prev_foreground"
            tools:layout_editor_absoluteY="146dp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="73dp"
            android:layout_height="108dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:srcCompat="@drawable/ic_next_foreground"
            tools:layout_editor_absoluteY="146dp" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="53dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/ic_repeat_foreground"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="279dp" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="53dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/ic_shuffle_foreground"
            tools:layout_editor_absoluteX="304dp"
            tools:layout_editor_absoluteY="279dp" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="53dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/ic_highquality_foreground"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="279dp" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="53dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/ic_timer_foreground"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="279dp" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="53dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_arrowback_foreground"
            tools:layout_editor_absoluteX="265dp"
            tools:layout_editor_absoluteY="336dp" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="53dp"
            android:layout_height="46dp"
            app:srcCompat="@drawable/ic_baseline_crop_square_24"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="336dp" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="42dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/ic_sharp_view_week_24"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="336dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>